--- a/style.css
+++ b/style.css
@@ -7,35 +7,42 @@ body{
 }
 
 #container{
-    display:flex;
-    justify-content: center;
-    align-items: flex-end;
-    height:100%;
+    display:grid;
+    grid-template-columns: 300px auto;
+    grid-template-rows: 1fr 340px 1fr;
+    height:100vh;
 }
 
-#card{
-    width:200px;
+#dealerScoreContent,#playerScoreContent{
+    display:block;
+    text-align: center;
+    background-color:rgba(0, 0, 0, 0.6);
+    color:red;
+    flex-wrap: wrap;
+}
+#dealerContent, #playerContent{
+    display:flex;
+    justify-content:center;
+    background-color:rgba(0, 0, 0, 0.6);
+}
+
+#gameContent{
+    grid-column: 1/-1;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+}
+
+#start{
+    width:80px;
+    height:60px;
+}
+
+.card, .dcard{
+    width:100px;
     height:auto;
-    animation-name: cardIn;
-    animation-duration: 1s;
     margin:20px;
     perspective: 1000px;
+    border:none;
 }
 
-#deck{
-    width:200px;
-    height:auto;
-    position: absolute;
-    top:100px;
-    left:100px;
-    perspective: 1000px;
-}
-
-@keyframes cardIn{
-    0% {
-        transform: translate(-500px,-500px);
-    }
-    100%{
-        transform: translateY(0);
-    }
-}
